Add JSON formatter utility

--- a/Components/App.razor
+++ b/Components/App.razor
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="tinyutils.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <HeadOutlet />
 </head>
 
