--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -2,8 +2,8 @@
 
 <div class="flex min-h-screen">
     <NavMenu />
-    <main class="flex-1 p-8 bg-gray-50">
-        <div class="max-w-6xl mx-auto">
+    <main class="flex-1 p-8 bg-gray-50 flex flex-col">
+        <div class="max-w-6xl mx-auto flex-1">
             @Body
         </div>
         <Footer />
