Add text utils and gh action to build and release

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -50,6 +50,14 @@
             </a>
         </li>
         <li>
+            <a href="/text-utils" class="block px-4 py-2 rounded hover:bg-gray-700 transition">
+                <span class="flex items-center gap-2">
+                    ✏
+                    Text Utils
+                </span>
+            </a>
+        </li>
+        <li>
             <a href="/stats" class="block px-4 py-2 rounded hover:bg-gray-700 transition">
                 <span class="flex items-center gap-2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
